best-practices/require-probes/bad-pod-update.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  labels:
    app: myapp
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox
    image: busybox:1.35
